// Kali Note | Normalized Architecture (V2.3)
// Formally organized by Base + Extension pattern

Table users {
  id integer [primary key]
  email varchar [unique]
  name varchar
  photo_url varchar
  created_at timestamp [default: `now()`]
}

Table devices {
  id integer [primary key]
  uuid varchar [unique]
  name varchar
}

Table device_users {
  device_id integer [ref: > devices.id]
  user_id integer [ref: > users.id]
  last_login timestamp [default: `now()`]

  indexes {
    (device_id, user_id) [pk]
  }
}

Table notebooks {
  id integer [primary key]
  user_id integer [ref: > users.id]
  name varchar
  created_at timestamp [default: `now()`]
}

Table pages {
  id integer [primary key]
  notebook_id integer [ref: > notebooks.id]
  page_number integer
  created_at timestamp [default: `now()`]
}

// BASE CLASS
Table objects {
  id integer [primary key]
  page_id integer [ref: > pages.id]
  type varchar // PHOTO, AUDIO, TEXT, PENCIL, LINK, FORM, FILE, BENT_FORM
  
  // Spatial Metadata
  x float [default: 0]
  y float [default: 0]
  width float [default: 100]
  height float [default: 100]
  
  timestamp timestamp [default: `now()`]
}

// EXTENSION: TEXTS & PENCIL
Table object_texts {
  object_id integer [primary key, ref: - objects.id]
  content text
  is_pencil boolean [default: false]
}

// EXTENSION: FILES & DOCUMENTS
Table object_files {
  object_id integer [primary key, ref: - objects.id]
  name varchar
  extension varchar
  size integer
  path varchar
}

// EXTENSION: MULTIMEDIA AUDIO
Table object_audio {
  object_id integer [primary key, ref: - objects.id]
  duration float
  start_time varchar
  end_time varchar
  path varchar
}

// EXTENSION: GEOMETRY & FORMS
Table object_forms {
  object_id integer [primary key, ref: - objects.id]
  shape_type varchar
  start_x float
  start_y float
  end_x float
  end_y float
  metadata text // JSON (Color, Stroke, etc.)
}
